5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1721_3061.log
== TEST (2019-05-02 18:10:49) 
-- CODE:
ataque=input("o tipo de ataque:")
quantidade=int(input("quantidade de unidades:"))
if(<=150):
	print("DROGON")
elif(<=30):
	print("RHAEGAL")
elif(<=40):
	print("VISERION")
else:
	print("Entrada invalida")
	
-- ERROR:
File "XXXX", line 3
    if(<=150):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:15:07) 
-- CODE:
ataque=input("o tipo de ataque:")
quantidade=int(input("quantidade de unidades:"))
if(ataque=="TERRESTRE"):
	print("Dragao:DROGON")
elif(ataque=="AEREO"):
	print("Dragao:RHAEGAL")
elif(ataque=="MARITIMO"):
	print("Dragao:VISERION")
else:
	print("Entrada invalida")
	
-- OUTPUT:
Dragao:RHAEGAL
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:15:37) 
-- CODE:
ataque=input("o tipo de ataque:")
quantidade=int(input("quantidade de unidades:"))
if(ataque=="TERRESTRE"):
	print("Dragao:DROGON")
elif(ataque=="AEREO"):
	print("Dragao:RHAEGAL")
elif(ataque=="MARITIMO"):
	print("Dragao:VISERION")
else:
	print("Entrada invalida")
	
-- EXECUTION TIME:
0.19901
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
Dragao:RHAEGAL
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:
Dragao:DROGON
-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
Dragao:VISERION
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:15:39) 
-- CODE:
ataque=input("o tipo de ataque:")
quantidade=int(input("quantidade de unidades:"))
if(ataque=="TERRESTRE"):
	print("Dragao:DROGON")
elif(ataque=="AEREO"):
	print("Dragao:RHAEGAL")
elif(ataque=="MARITIMO"):
	print("Dragao:VISERION")
else:
	print("Entrada invalida")
	
-- OUTPUT:
Dragao:RHAEGAL
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:19:00) 
-- CODE:
ataque=input("o tipo de ataque:")
quantidade=int(input("quantidade de unidades:"))
if(ataque=="TERRESTRE") and (baforada==150):
	print("Dragao:DROGON")
elif(ataque=="AEREO") and (baforada==30):
	print("Dragao:RHAEGAL")
elif(ataque=="MARITIMO") and (baforada==40):
	print("Dragao:VISERION")
else:
	print("Entrada invalida")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    elif(ataque=="AEREO") and (baforada==30):
NameError: name 'baforada' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:21:00) 
-- CODE:
ataque=input("o tipo de ataque:")
quantidade=int(input("quantidade de unidades:"))
if(ataque=="TERRESTRE") and (quantidade<=150):
	print("Dragao:DROGON")
elif(ataque=="AEREO") ad (quantidade<=30):
	print("Dragao:RHAEGAL")
elif(ataque=="MARITIMO") and (quantidade<=40):
	print("Dragao:VISERION")
else:
	print("Entrada invalida")
	
-- ERROR:
File "XXXX", line 5
    elif(ataque=="AEREO") ad (quantidade<=30):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:21:13) 
-- CODE:
ataque=input("o tipo de ataque:")
quantidade=int(input("quantidade de unidades:"))
if(ataque=="TERRESTRE") and (quantidade<=150):
	print("Dragao:DROGON")
elif(ataque=="AEREO") and (quantidade<=30):
	print("Dragao:RHAEGAL")
elif(ataque=="MARITIMO") and (quantidade<=40):
	print("Dragao:VISERION")
else:
	print("Entrada invalida")
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:22:04) 
-- CODE:
ataque=input("o tipo de ataque:")
quantidade=int(input("quantidade de unidades:"))
if(ataque=="TERRESTRE") and (quantidade<=150):
	print("Dragao:DROGON")
elif(ataque=="AEREO") and (quantidade<=30):
	print("Dragao:RHAEGAL")
elif(ataque=="MARITIMO") and (quantidade<=40):
	print("Dragao:VISERION")
else:
	print("Entrada invalida")
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:28:57) 
-- CODE:
ataque=input("o tipo de ataque:")
quantidade=int(input("quantidade de unidades:"))
print("Entrada",quantidade)
if(ataque=="TERRESTRE") and (quantidade<=150):
	print("Dragao:DROGON")
elif(ataque=="AEREO") and (quantidade<=30):
	print("Dragao:RHAEGAL")
elif(ataque=="MARITIMO") and (quantidade<=40):
	print("Dragao:VISERION")
else:
	print("Entrada invalida")
	
-- OUTPUT:
Entrada 425
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:31:27) 
-- CODE:
ataque=input("o tipo de ataque:")
quantidade=int(input("quantidade de unidades:"))
if(ataque=="TERRESTRE") and (quantidade<=150):
	print("Dragao:DROGON")
elif(ataque=="AEREO") and (quantidade<=30):
	print("Dragao:RHAEGAL")
elif(ataque=="MARITIMO") and (quantidade<=40):
	print("Dragao:VISERION")
else:
	print("nome do dragao")
	print("quantidade de baforadas")
	
	
	
	
-- OUTPUT:
nome do dragao
quantidade de baforadas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:31:44) 
-- CODE:
ataque=input("o tipo de ataque:")
quantidade=int(input("quantidade de unidades:"))
if(ataque=="TERRESTRE") and (quantidade<=150):
	print("Dragao:DROGON")
elif(ataque=="AEREO") and (quantidade<=30):
	print("Dragao:RHAEGAL")
elif(ataque=="MARITIMO") and (quantidade<=40):
	print("Dragao:VISERION")

	
	
	
	
-- OUTPUT:
nome do dragao
quantidade de baforadas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:35:31) 
-- CODE:
ataque=input("o tipo de ataque:")
quantidade=int(input("quantidade de unidades:"))
if(ataque=="TERRESTRE") and (quantidade<=150):
	print("Dragao:DROGON")
elif(ataque=="AEREO") and (quantidade<=30):
	print("Dragao:RHAEGAL")
elif(ataque=="MARITIMO") and (quantidade<=40):
	print("Dragao:VISERION")
else:
	print("Entrada invalida")


	
	
	
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:36:43) 
-- CODE:
ataque=input("o tipo de ataque:")
quantidade=int(input("quantidade de unidades:"))
if(ataque=="TERRESTRE") and (quantidade<=150):
	print("Dragao:DROGON")
elif(ataque=="AEREO") and (quantidade<=30):
	print("Dragao:RHAEGAL")
elif(ataque=="MARITIMO") and (quantidade<=40):
	print("Dragao:VISERION")
else:
	print("Entrada invalida")


	
	
	
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:39:03) 
-- CODE:
ataque=input("o tipo de ataque:")
quantidade=int(input("quantidade de unidades:"))
if(ataque=="TERRESTRE") and (quantidade==150):
	print("Dragao:DROGON")
elif(ataque=="AEREO") and (quantidade<=30):
	print("Dragao:RHAEGAL")
elif(ataque=="MARITIMO") and (quantidade<=40):
	print("Dragao:VISERION")
else:
	print("Entrada invalida")


	
	
	
	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:48:36) 
-- CODE:
ataque=input("o tipo de ataque TERRESTRE,AEREO ou MARITIMO:")
quantidade=int(input("quantidade de unidades:"))
if(ataque=="TERRESTRE"):
	msg=quantidade-150
	print("DROGON")
	print(msg)
elif(ataque=="AEREO"):
	msg=quantidade-30
	print("RHAEGAL")
	print(msg)
elif(ataque=="MARITIMO"):
	msg=quantidade-40
	print("VISERION")
	print(msg)
else:
	print("Entrada invalida")
	


	
	
	
	
-- EXECUTION TIME:
0.141154
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
RHAEGAL
395
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:
DROGON
-85
-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
VISERION
412
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:48:41) 
-- CODE:
ataque=input("o tipo de ataque TERRESTRE,AEREO ou MARITIMO:")
quantidade=int(input("quantidade de unidades:"))
if(ataque=="TERRESTRE"):
	msg=quantidade-150
	print("DROGON")
	print(msg)
elif(ataque=="AEREO"):
	msg=quantidade-30
	print("RHAEGAL")
	print(msg)
elif(ataque=="MARITIMO"):
	msg=quantidade-40
	print("VISERION")
	print(msg)
else:
	print("Entrada invalida")
	


	
	
	
	
-- OUTPUT:
RHAEGAL
395
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:49:13) 
-- CODE:
ataque=input("o tipo de ataque TERRESTRE,AEREO ou MARITIMO:")
quantidade=int(input("quantidade de unidades:"))
ataque=ataque.upper()
if(ataque=="TERRESTRE"):
	msg=quantidade-150
	print("DROGON")
	print(msg)
elif(ataque=="AEREO"):
	msg=quantidade-30
	print("RHAEGAL")
	print(msg)
elif(ataque=="MARITIMO"):
	msg=quantidade-40
	print("VISERION")
	print(msg)
else:
	print("Entrada invalida")
	


	
	
	
	
-- OUTPUT:
RHAEGAL
395
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:49:53) 
-- CODE:
ataque=input("o tipo de ataque TERRESTRE,AEREO ou MARITIMO:")
quantidade=int(input("quantidade de unidades:"))
ataque=ataque.upper()
if(ataque=="TERRESTRE"):
	msg=quantidade-150
	print("DROGON")
	print(msg)
elif(ataque=="AEREO"):
	msg=quantidade-30
	print("RHAEGAL")
	print(msg)
elif(ataque=="MARITIMO"):
	msg=quantidade-87
	print("VISERION")
	print(msg)
else:
	print("Entrada invalida")
	


	
	
	
	
-- OUTPUT:
RHAEGAL
395
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:50:03) 
-- CODE:
ataque=input("o tipo de ataque TERRESTRE,AEREO ou MARITIMO:")
quantidade=int(input("quantidade de unidades:"))
ataque=ataque.upper()
if(ataque=="TERRESTRE"):
	msg=quantidade-150
	print("DROGON")
	print(msg)
elif(ataque=="AEREO"):
	msg=quantidade-30
	print("RHAEGAL")
	print(msg)
elif(ataque=="MARITIMO"):
	msg=quantidade-87
	print("VISERION")
	print(msg)
else:
	print("Entrada invalida")
	


	
	
	
	
-- EXECUTION TIME:
0.160469
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
RHAEGAL
395
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:
DROGON
-85
-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
VISERION
365
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:51:13) 
-- CODE:
ataque=input("o tipo de ataque TERRESTRE,AEREO ou MARITIMO:")
quantidade=int(input("quantidade de unidades:"))
ataque=ataque.upper()
if(ataque=="TERRESTRE"):
	msg=quantidade-150
	print("DROGON")
	print(msg)
elif(ataque=="AEREO"):
	msg=quantidade-30
	print("RHAEGAL")
	print(msg)
elif(ataque=="MARITIMO"):
	msg=quantidade-40
	print("VISERION")
	print(msg)
else:
	print("Entrada invalida")
	


	
	
	
	
-- OUTPUT:
RHAEGAL
395
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:51:27) 
-- CODE:
ataque=input("o tipo de ataque TERRESTRE,AEREO ou MARITIMO:")
quantidade=int(input("quantidade de unidades:"))
ataque=ataque.upper()
if(ataque=="TERRESTRE"):
	msg=quantidade-150
	print("DROGON")
	print(msg)
elif(ataque=="AEREO"):
	msg=quantidade-30
	print("RHAEGAL")
	print(msg)
elif(ataque=="MARITIMO"):
	msg=quantidade-40
	print("VISERION")
	print(msg)
else:
	print("Entrada invalida")
	


	
	
	
	
-- OUTPUT:
RHAEGAL
395
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:52:56) 
-- CODE:
ataque=input("o tipo de ataque TERRESTRE,AEREO ou MARITIMO:")
quantidade=int(input("quantidade de unidades:"))
ataque=ataque.upper()
if(ataque=="TERRESTRE") and (quantidade>0):
	msg=quantidade-150
	print("DROGON")
	print(msg)
elif(ataque=="AEREO") and (quantidade>0):
	msg=quantidade-30
	print("RHAEGAL")
	print(msg)
elif(ataque=="MARITIMO") and (quantidade>0):
	msg=quantidade-40
	print("VISERION")
	print(msg)
else:
	print("Entrada invalida")
	


	
	
	
	
-- OUTPUT:
RHAEGAL
395
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:53:11) 
-- CODE:
ataque=input("o tipo de ataque TERRESTRE,AEREO ou MARITIMO:")
quantidade=int(input("quantidade de unidades:"))
ataque=ataque.upper()
if(ataque=="TERRESTRE") and (quantidade>0):
	msg=quantidade-150
	print("DROGON")
	print(msg)
elif(ataque=="AEREO") and (quantidade>0):
	msg=quantidade-30
	print("RHAEGAL")
	print(msg)
elif(ataque=="MARITIMO") and (quantidade>0):
	msg=quantidade-87
	print("VISERION")
	print(msg)
else:
	print("Entrada invalida")
	


	
	
	
	
-- OUTPUT:
RHAEGAL
395
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:53:13) 
-- CODE:
ataque=input("o tipo de ataque TERRESTRE,AEREO ou MARITIMO:")
quantidade=int(input("quantidade de unidades:"))
ataque=ataque.upper()
if(ataque=="TERRESTRE") and (quantidade>0):
	msg=quantidade-150
	print("DROGON")
	print(msg)
elif(ataque=="AEREO") and (quantidade>0):
	msg=quantidade-30
	print("RHAEGAL")
	print(msg)
elif(ataque=="MARITIMO") and (quantidade>0):
	msg=quantidade-87
	print("VISERION")
	print(msg)
else:
	print("Entrada invalida")
	


	
	
	
	
-- EXECUTION TIME:
0.17405
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
RHAEGAL
395
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:
DROGON
-85
-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
VISERION
365
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:53:16) 
-- CODE:
ataque=input("o tipo de ataque TERRESTRE,AEREO ou MARITIMO:")
quantidade=int(input("quantidade de unidades:"))
ataque=ataque.upper()
if(ataque=="TERRESTRE") and (quantidade>0):
	msg=quantidade-150
	print("DROGON")
	print(msg)
elif(ataque=="AEREO") and (quantidade>0):
	msg=quantidade-30
	print("RHAEGAL")
	print(msg)
elif(ataque=="MARITIMO") and (quantidade>0):
	msg=quantidade-87
	print("VISERION")
	print(msg)
else:
	print("Entrada invalida")
	


	
	
	
	
-- EXECUTION TIME:
0.259037
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
RHAEGAL
395
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:
DROGON
-85
-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
VISERION
365
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:53:16) 
-- CODE:
ataque=input("o tipo de ataque TERRESTRE,AEREO ou MARITIMO:")
quantidade=int(input("quantidade de unidades:"))
ataque=ataque.upper()
if(ataque=="TERRESTRE") and (quantidade>0):
	msg=quantidade-150
	print("DROGON")
	print(msg)
elif(ataque=="AEREO") and (quantidade>0):
	msg=quantidade-30
	print("RHAEGAL")
	print(msg)
elif(ataque=="MARITIMO") and (quantidade>0):
	msg=quantidade-87
	print("VISERION")
	print(msg)
else:
	print("Entrada invalida")
	


	
	
	
	
-- EXECUTION TIME:
0.131754
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
RHAEGAL
395
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:
DROGON
-85
-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
VISERION
365
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:53:32) 
-- CODE:
ataque=input("o tipo de ataque TERRESTRE,AEREO ou MARITIMO:")
quantidade=int(input("quantidade de unidades:"))
ataque=ataque.upper()
if(ataque=="TERRESTRE") and (quantidade>0):
	msg=quantidade-150
	print("DROGON")
	print(msg)
elif(ataque=="AEREO") and (quantidade>0):
	msg=quantidade-30
	print("RHAEGAL")
	print(msg)
elif(ataque=="MARITIMO") and (quantidade>0):
	msg=quantidade-87
	print("VISERION")
	print(msg)
else:
	print("Entrada invalida")
	


	
	
	
	
-- EXECUTION TIME:
0.146396
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
RHAEGAL
395
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:
DROGON
-85
-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
VISERION
365
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:54:24) 
-- CODE:
ataque=input("o tipo de ataque TERRESTRE,AEREO ou MARITIMO:")
quantidade=int(input("quantidade de unidades:"))
ataque=ataque.upper()
if(ataque=="TERRESTRE") and (quantidade>0):
	msg=quantidade-150
	print("DROGON")
	print(msg)
elif(ataque=="AEREO") and (quantidade>0):
	msg=quantidade-30
	print("RHAEGAL")
	print(msg)
elif(ataque=="MARITIMO") and (quantidade>0):
	msg=quantidade-87
	print("VISERION")
	print(msg)
else:
	print("Entrada invalida")
	


	
	
	
	
-- EXECUTION TIME:
0.183928
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
RHAEGAL
395
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:
DROGON
-85
-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
VISERION
365
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:54:25) 
-- CODE:
ataque=input("o tipo de ataque TERRESTRE,AEREO ou MARITIMO:")
quantidade=int(input("quantidade de unidades:"))
ataque=ataque.upper()
if(ataque=="TERRESTRE") and (quantidade>0):
	msg=quantidade-150
	print("DROGON")
	print(msg)
elif(ataque=="AEREO") and (quantidade>0):
	msg=quantidade-30
	print("RHAEGAL")
	print(msg)
elif(ataque=="MARITIMO") and (quantidade>0):
	msg=quantidade-87
	print("VISERION")
	print(msg)
else:
	print("Entrada invalida")
	


	
	
	
	
-- EXECUTION TIME:
0.147729
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
RHAEGAL
395
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:
DROGON
-85
-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
VISERION
365
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:54:26) 
-- CODE:
ataque=input("o tipo de ataque TERRESTRE,AEREO ou MARITIMO:")
quantidade=int(input("quantidade de unidades:"))
ataque=ataque.upper()
if(ataque=="TERRESTRE") and (quantidade>0):
	msg=quantidade-150
	print("DROGON")
	print(msg)
elif(ataque=="AEREO") and (quantidade>0):
	msg=quantidade-30
	print("RHAEGAL")
	print(msg)
elif(ataque=="MARITIMO") and (quantidade>0):
	msg=quantidade-87
	print("VISERION")
	print(msg)
else:
	print("Entrada invalida")
	


	
	
	
	
-- EXECUTION TIME:
0.114698
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
RHAEGAL
395
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:
RHAEGAL
395
-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
RHAEGAL
395
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:54:26) 
-- CODE:
ataque=input("o tipo de ataque TERRESTRE,AEREO ou MARITIMO:")
quantidade=int(input("quantidade de unidades:"))
ataque=ataque.upper()
if(ataque=="TERRESTRE") and (quantidade>0):
	msg=quantidade-150
	print("DROGON")
	print(msg)
elif(ataque=="AEREO") and (quantidade>0):
	msg=quantidade-30
	print("RHAEGAL")
	print(msg)
elif(ataque=="MARITIMO") and (quantidade>0):
	msg=quantidade-87
	print("VISERION")
	print(msg)
else:
	print("Entrada invalida")
	


	
	
	
	
-- EXECUTION TIME:
0.276645
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
RHAEGAL
395
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:
DROGON
-85
-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
DROGON
-85
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:54:26) 
-- CODE:
ataque=input("o tipo de ataque TERRESTRE,AEREO ou MARITIMO:")
quantidade=int(input("quantidade de unidades:"))
ataque=ataque.upper()
if(ataque=="TERRESTRE") and (quantidade>0):
	msg=quantidade-150
	print("DROGON")
	print(msg)
elif(ataque=="AEREO") and (quantidade>0):
	msg=quantidade-30
	print("RHAEGAL")
	print(msg)
elif(ataque=="MARITIMO") and (quantidade>0):
	msg=quantidade-87
	print("VISERION")
	print(msg)
else:
	print("Entrada invalida")
	


	
	
	
	
-- EXECUTION TIME:
0.231666
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
VISERION
365
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:
VISERION
365
-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:54:26) 
-- CODE:
ataque=input("o tipo de ataque TERRESTRE,AEREO ou MARITIMO:")
quantidade=int(input("quantidade de unidades:"))
ataque=ataque.upper()
if(ataque=="TERRESTRE") and (quantidade>0):
	msg=quantidade-150
	print("DROGON")
	print(msg)
elif(ataque=="AEREO") and (quantidade>0):
	msg=quantidade-30
	print("RHAEGAL")
	print(msg)
elif(ataque=="MARITIMO") and (quantidade>0):
	msg=quantidade-87
	print("VISERION")
	print(msg)
else:
	print("Entrada invalida")
	


	
	
	
	
-- EXECUTION TIME:
0.378233
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1721/3061/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
